# GFractal

./: .gitignore  CMakeLists.txt  README.md
configuration/: configure.sh  configure_debug.sh  configure_release.sh  configure_with_kokkos.sh
examples/example-1/: CMakeLists.txt  example-1.cpp
include/: color_map.h  complex_function.h  julia_fractal.h  newton_fractal.h  output_data.h
include/gfractal/: julia_fractal.h  macros.h  newton_fractal.h  output_data.h
source/: CMakeLists.txt  color_map.cpp  complex_function.cpp  julia_fractal.cpp  newton_fractal.cpp  output_data.cpp
