MESSAGE(STATUS "Setting up GFractal library :)")

MESSAGE(STATUS "This is CMake ${CMAKE_VERSION}")
MESSAGE(STATUS "")
CMAKE_MINIMUM_REQUIRED(VERSION "3.7.0")

PROJECT("GFractal" CXX)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

ADD_SUBDIRECTORY("source")

SET_TARGET_PROPERTIES("${PROJECT_NAME}" PROPERTIES LINKER_LANGUAGE CXX)

#ADD_LIBRARY(GFractal)

#INSTALL(DIRECTORY GFractal
#  DESTINATION "include"
#  COMPONENT library
#  FILES_MATCHING PATTERN "*.h"
#  )

#TARGET_LINK_LIBRARIES(GFractal 
#  source
#  )

#ADD_EXECUTABLE(gfractal )

MESSAGE(STATUS "Setting up GFractal library... done!")
